--- a/client/src/index.less
+++ b/client/src/index.less
@@ -92,12 +92,8 @@ select {
   animation: loading-spinner 1.2s linear infinite;
 }
 @keyframes loading-spinner {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
 
 #root { height: 100%; }
