--- a/client/src/variables.less
+++ b/client/src/variables.less
@@ -1,8 +1,10 @@
 @text-color: #cfcfd6;
 @page-background: #181818;
+@panel-background: #252525;
+
 @default-font-face: 'Open Sans', Arial, sans-serif;
 @default-font-size: 14px;
-@panel-border-color: #7f8ea0;
+@panel-border-color: #585858;
 @panel-border: 1px solid @panel-border-color;
 // @button-blue: #6591c5;
 
